--- a/src/components/AllPokemon/Cards/Card/styles.scss
+++ b/src/components/AllPokemon/Cards/Card/styles.scss
@@ -1,27 +1,34 @@
-.card{
-    border: solid rgb(193, 193, 0) 4px;
-    border-radius: 15px;
-    padding: 1.5rem;
-    width: 30%;
-    box-shadow: 0 0 10px black;
-    transition: all 0.3s ease 0s;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    gap: 2rem;
-    z-index: 1;
-    
-    &:hover {
-        transform: translateY(-10px);
-    }
-  
-      &-img{
-        width: 60%;
-      }
-  
-      &-title{
-        font-size: 32px;
-        font-weight: bold;
-      }
-    }
+@use "src/styles/vars";
+.card {
+  border: solid vars.$yellow 4px;
+  border-radius: 15px;
+  padding: 1.5rem;
+  width: 30%;
+  box-shadow: 0 0 10px black;
+  transition: all 0.3s ease 0s;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  gap: 2rem;
+  z-index: 1;
+
+  &:hover {
+    transform: translateY(-10px);
+  }
+
+  &-img {
+    width: 60%;
+  }
+
+  &-name{
+    font-size: 32px;
+    color: vars.$yellow;
+  }
+
+  &-title {
+    font-size: 32px;
+    font-weight: bold;
+    color:  rgb(149, 27, 27);
+  }
+}
