--- a/src/components/AllPokemon/Cards/Card/styles.scss
+++ b/src/components/AllPokemon/Cards/Card/styles.scss
@@ -1,8 +1,9 @@
 @use "src/styles/vars";
+
 .card {
   border-radius: 15px;
   padding: 1.5rem;
-  width: 30%;
+  width: 29%;
   box-shadow: 0 0 10px black;
   transition: all 0.3s ease 0s;
   display: flex;
@@ -11,22 +12,50 @@
   justify-content: space-between;
   gap: 2rem;
   z-index: 1;
-
-  &:hover {
-    transform: translateY(-10px);
-  }
-
-  &-img {
-    width: 60%;
-  }
-
-  &-name{
-    font-size: 32px;
-    color: white;
-  }
-
-  &-title {
-    font-size: 32px;
-    font-weight: bold;
 }
+
+.card-img {
+  width: 60%;
+  transition: transform 0.3s ease 0s;
+}
+
+.card-name {
+  font-size: 32px;
+  color: white;
+  text-shadow: 1px 1px 10px black;
+}
+
+.card-type {
+  color: white;
+  text-shadow: 1px 1px 10px black;
+}
+
+.card-stat {
+  position: relative;
+  text-align: center;
+}
+
+.card-stat-bar {
+  position: relative;
+  width: 400px;
+  height: 30px;
+  background-color: #ccc;
+  margin-bottom: 20px;
+  border-radius: 5px;
+  box-shadow: 1px 1px 10px black;
+}
+
+.card-stat-bar-fill {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  background-color: rgb(0, 0, 0);
+  text-align: left;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 12px;
+  color: white;
+  border-radius: 5px;
 }
