Feat: Ajout d'un select pour pouvoir aussi choisir par type

--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -23,7 +23,7 @@
         color: vars.$yellow;
         font-weight: 900;
         margin: 20px;
-
+        text-shadow: 1px 1px 10px black;
     }
 
 }
