--- a/src/components/AllPokemon/styles.scss
+++ b/src/components/AllPokemon/styles.scss
@@ -13,9 +13,47 @@
     width: 90%;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 
-    &-h2{
+    &-h2 {
         font-size: 32px;
         color: rgb(193, 193, 0);
         font-weight: 900;
-}
+        padding: 20px;
+        text-shadow: 1px 1px 20px black;
+    }
+
+    &-div {
+        align-items: center;
+        justify-content: center;
+        &-input {
+            padding: 10px;
+            width: 400px;
+            border-radius: 10px;
+            background-color: rgb(211, 211, 211);
+            margin: 10px;
+        }
+
+        &-input::placeholder{
+            color: black;
+            font-weight: 700;
+            text-align: left;
+        }
+
+        &-input:focus::placeholder {
+            color: transparent;
+          }
+        &-p{
+            padding: 20px;
+        }
+
+        &-select {
+            background-color: rgb(211, 211, 211);
+            width: 150px;
+            text-align: center;
+            padding: 10px;
+            border-radius: 10px;
+            margin: 10px;
+            color: black;
+            font-weight: 700;
+        }
+    }
 }
