Feat: Modification du css pour plus de lisibilité

--- a/src/components/AllPokemon/Cards/Card/styles.scss
+++ b/src/components/AllPokemon/Cards/Card/styles.scss
@@ -12,30 +12,30 @@
   justify-content: space-between;
   gap: 2rem;
   z-index: 1;
-}
 
-.card-img {
+
+&-img {
   width: 60%;
   transition: transform 0.3s ease 0s;
 }
 
-.card-name {
+&-name {
   font-size: 32px;
   color: white;
   text-shadow: 1px 1px 10px black;
 }
 
-.card-type {
+&-type {
   color: white;
   text-shadow: 1px 1px 10px black;
 }
 
-.card-stat {
+&-stat {
   position: relative;
   text-align: center;
 }
 
-.card-stat-bar {
+&-stat-bar {
   position: relative;
   width: 400px;
   height: 30px;
@@ -43,18 +43,33 @@
   margin-bottom: 20px;
   border-radius: 5px;
   box-shadow: 1px 1px 10px black;
+  text-align: right;
+  align-items: center;
+  text-align: center;
 }
 
-.card-stat-bar-fill {
+&-stat-bar-fill {
   position: absolute;
   top: 0;
   left: 0;
   height: 100%;
   background-color: rgb(0, 0, 0);
-  text-align: left;
   display: flex;
   align-items: center;
   font-size: 12px;
   color: white;
   border-radius: 5px;
+}
+
+&-stat-bar-statname {
+  padding-left: 20px;
+}
+
+&-stat-bar-statvalue {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  text-align: center;
+  padding: 6px;
+}
 }
