--- a/src/components/AllPokemon/Cards/styles.scss
+++ b/src/components/AllPokemon/Cards/styles.scss
@@ -25,4 +25,12 @@
     margin-top: 20px;
     background-color: #d3d3d3;
   }
+  &-button-down {
+    padding: 20px;
+    border-radius: 10px;
+    font-weight: 700;
+    font-size: 16px;
+    box-shadow: 1px 0px 20px black;
+    background-color: #d3d3d3;
+  }
 }
