--- a/src/components/AllPokemon/styles.scss
+++ b/src/components/AllPokemon/styles.scss
@@ -43,6 +43,8 @@
           }
         &-p{
             padding: 20px;
+            line-height: 1.5rem;
+            
         }
 
         &-select {
