Feat ; Ajout de la data sur la card et test avec 1 élément (ok), rajout de la nouvelle structure pour la future donnée pour les pokemon de 0 à 200

--- a/src/components/AllPokemon/Cards/Card/styles.scss
+++ b/src/components/AllPokemon/Cards/Card/styles.scss
@@ -26,10 +26,11 @@
   padding: 5px;
   color: white;
   text-shadow: 1px 0px 20px black;
+  line-height: 1.2rem;
 } 
 
   &-img-evol {
-    width: 30%;
+    width: 25%;
     padding: 10px;
   }
 
