--- a/src/components/AllPokemon/Cards/Card/styles.scss
+++ b/src/components/AllPokemon/Cards/Card/styles.scss
@@ -19,8 +19,10 @@
   transform: rotateY(180deg);
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
   flex-direction: column;
+  width: 100%;
+  height: 100%;
 }
 &-type-p {
   padding: 5px;
@@ -30,7 +32,7 @@
 } 
 
   &-img-evol {
-    width: 25%;
+    width: 20%;
     padding: 10px;
   }
 
