--- a/src/components/AllPokemon/Cards/Card/styles.scss
+++ b/src/components/AllPokemon/Cards/Card/styles.scss
@@ -4,6 +4,7 @@
   border-radius: 15px;
   padding: 1.5rem;
   width: 30%;
+  min-width: 30%;
   box-shadow: 0 0 10px black;
   transition: all 0.3s ease 0s;
   display: flex;
