--- a/src/styles/_responsive.scss
+++ b/src/styles/_responsive.scss
@@ -43,20 +43,30 @@
           padding-right: 5px;
         }
 
-      &-input {
-        width: 90%;
-      }
+        &-input {
+          width: 90%;
+        }
 
-      &-select {
-        width: 42%;
-      }
+        &-select {
+          width: 42%;
+        }
       }
 
       .cards {
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        gap: 2rem;
+        z-index: 1;
+        perspective: 1000px;
+        cursor: pointer;
+
         &-all {
           .card {
             min-width: 50%;
-            max-width: 50%;
+            max-width: 70%;
 
             &-name {
               font-size: 16px;
@@ -71,19 +81,48 @@
             }
 
             &-stat {
+              position: relative;
+              text-align: center;
+              max-width: 65%;
+
               &-bar {
-                width: 200px;
+
+                max-width: 40%;
               &-statvalue {
-                width: 20px;
-              }
-              &-fill {
-                  width: 40px;
+                width: 200px;
               }
             }
           }
-          
 
-    
+            &-content {
+              transform: rotateY(180deg);
+              display: flex;
+              align-items: center;
+              justify-content: space-evenly;
+              flex-direction: column;
+              width: 100%;
+              height: 100%;
+            }
+
+            &-type-p {
+              padding: 5px;
+              color: white;
+              text-shadow: 1px 0px 20px black;
+              line-height: 1.2rem;
+              font-size: 11px;
+            }
+
+            &-img-evol {
+              width: 50%;
+              padding: 5px;
+            }
+
+            &-img {
+              width: 80%;
+              transition: transform 0.3s ease 0s;
+            }
+
+
           }
         }
       }
