--- a/src/styles/_responsive.scss
+++ b/src/styles/_responsive.scss
@@ -64,9 +64,15 @@
         cursor: pointer;
 
         &-all {
+
+          margin: 0;
+          padding: 0;
+          gap: 1;
+          max-width: 100%;
+
           .card {
-            min-width: 50%;
-            max-width: 70%;
+            min-width: 90%;
+            max-width: 100%;
 
             &-name {
               font-size: 16px;
@@ -83,16 +89,17 @@
             &-stat {
               position: relative;
               text-align: center;
-              max-width: 65%;
+              max-width: 100%;
+              left: -15px;
 
               &-bar {
+                max-width: 115%;
 
-                max-width: 40%;
-              &-statvalue {
-                width: 200px;
+                &-statvalue {
+                  width: 200px;
+                }
               }
             }
-          }
 
             &-content {
               transform: rotateY(180deg);
