Feat: Début du responsive avec max 320width

--- a/src/styles/_responsive.scss
+++ b/src/styles/_responsive.scss
@@ -98,6 +98,10 @@
                 &-statvalue {
                   width: 200px;
                 }
+
+                &-fill {
+                  max-width: 150px;
+                }
               }
             }
 
